# loom

./: .gitignore  MANIFEST.in  QUICKSTART.md  README.md  cli.py  loom.py  loom.toml.example  main.py  pyproject.toml  pytest.ini  requirements.txt  run_once.py  setup.py
.github/: copilot-instructions.md
docs/: DUCKDB.md  architecture.mmd
examples/: 01_hello_workflow.py  MANIFEST.in  README.md  demo_activity.py  demo_workflow.py
loom/: __init__.py  __main__.py
loom/cli/: __init__.py  cli.py
loom/common/: activity.py  config.py  errors.py  workflow.py
loom/core/: compiled.py  context.py  engine.py  graph.py  handle.py  logger.py  runner.py  state.py  worker.py  workflow.py
loom/database/: __init__.py  base.py  db.py  duckdb_backend.py
loom/lib/: progress.py  utils.py
loom/migrations/down/: 002_create_workflows.sql  003.create_events.sql  004.create_tasks.sql
loom/migrations/duckdb_down/: 001_setup_pragma.sql  002_create_workflows.sql  003_create_events.sql  004_create_tasks.sql  005_create_indexes.sql  006_auto_update_triggers.sql  007_create_logs.sql
loom/migrations/duckdb_up/: 001_setup_pragma.sql  002_create_workflows.sql  003_create_events.sql  004_create_tasks.sql  006_auto_update_triggers.sql  007_create_logs.sql
loom/migrations/up/: 001_setup_pragma.sql  003_create_events.sql  004_create_tasks.sql  006_auto_update_triggers.sql
loom/schemas/: activity.py  database.py  graph.py  state.py  workflow.py
loom/web/: __init__.py  main.py  schemas.py
loom/web/api/: __init__.py  events.py  graphs.py  logs.py  stats.py  tasks.py  workflows.py
src/: __init__.py
src/cli/: cli.py
src/common/: activity.py  config.py  errors.py  workflow.py
src/core/: context.py  engine.py  handle.py  runner.py  state.py  workflow.py
src/database/: db.py
src/decorators/: activity.py  workflow.py
src/lib/: utils.py
src/migrations/down/: 001_setup_pragma.sql  005.create_indexes.sql  006_auto_update_triggers.sql
src/migrations/up/: 002_create_workflows.sql  005.create_indexes.sql  007_create_logs.sql
src/schemas/: context.py  database.py  events.py  tasks.py  workflow.py
tests/: README.md  conftest.py  test_activity.py  test_context.py  test_database.py  test_integration.py  test_load.py  test_workflow.py
