[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loom-core"
version = "1.0.2"
description = "Durable workflow orchestration engine for Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Satadeep Dasgupta", email = "satadeep.dasgupta@brainiuminfotech.com"}
]
keywords = ["workflow", "orchestration", "durable", "event-sourcing", "temporal"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: AsyncIO",
]

dependencies = [
    "aiosqlite>=0.19.0",
    "click>=8.0.0",
    "rich>=14.3.1",
    "fastapi[standard]>=0.95.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
]

[project.scripts]
loom = "loom.cli.cli:cli"

[project.urls]
Homepage = "https://github.com/satadeep3927/loom"
Documentation = "https://github.com/satadeep3927/loom/blob/main/README.md"
Repository = "https://github.com/satadeep3927/loom"
Issues = "https://github.com/satadeep3927/loom/issues"

[tool.setuptools]
packages = ["loom", "loom.common", "loom.core", "loom.database", "loom.decorators", "loom.lib", "loom.schemas", "loom.cli", "loom.migrations", "loom.web", "loom.web.api"]
include-package-data = true

[tool.setuptools.package-data]
loom = ["migrations/up/*.sql", "migrations/down/*.sql"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["setup.py", "tests", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = "-v --cov=loom --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["E", "F", "I", "N", "W"]
lint.ignore = ["E501", "F405"]
exclude = ["tests", "examples", "__pycache__"]
